# ozone

./: .asf.yaml  .editorconfig  .gitattributes  .gitignore  .rsync_HDDS-10411.sh.swp  .rsync_mastercard_ENGESC_28414.sh.swo  .travis.yml  6014.diff  7189.diff  AGENTS.md  AUTHORS  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  HDDS-13515-Design-Document.md  HISTORY.md  HISTORY.txt  LICENSE.txt  MAINTAINERS.md  NOTICE.txt  PHASE_STATUS.md  README.md  README.txt  SECURITY.md  STS_DEDICATED_PORT_PLAN.md  THREAT_MODEL.md  autosync.py  build-minimal-and-test.sh  cherrypick.sh  date  deptree  enable_fso.sh  ozone-source.patch.1  ozone-source.patch.1.3.0.7.3.1.0-197  ozone-source.patch.10  ozone-source.patch.12  ozone-source.patch.13  ozone-source.patch.14  ozone-source.patch.15  ozone-source.patch.16  (+20 more)
hadoop-hdds/framework/: CMakeLists.txt  pom.xml
hadoop-hdds/framework/dev-support/: findbugsExcludeFile.xml
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/: ExitManager.java  NodeDetails.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/conf/: DatanodeRatisGrpcConfig.java  DatanodeRatisServerConfig.java  DatanodeReconfigurationHandler.java  HddsConfServlet.java  ReconfigurableBase.java  ReconfigurationChangeCallback.java  ReconfigurationHandler.java  TracingReconfigurationCallback.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/freon/: FakeClusterTopology.java  FakeScmBlockLocationProtocolClient.java  FakeScmContainerLocationProtocolClient.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/fs/: AbstractSpaceUsageSource.java  CachingSpaceUsageSource.java  DU.java  DUFactory.java  DUOptimized.java  DUOptimizedFactory.java  DedicatedDiskSpaceUsage.java  DedicatedDiskSpaceUsageFactory.java  SaveSpaceUsageToFile.java  SpaceUsageCheckFactory.java  SpaceUsageCheckParams.java  SpaceUsagePersistence.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/metrics/: MetricsUtil.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/protocol/: DiskBalancerProtocol.java  ReconfigProtocol.java  ReconfigureProtocol.java  SCMSecretKeyProtocol.java  SCMSecretKeyProtocolDatanode.java  SCMSecretKeyProtocolOm.java  SCMSecurityProtocol.java  SecretKeyProtocol.java  SecretKeyProtocolDatanode.java  SecretKeyProtocolOm.java  SecretKeyProtocolScm.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/protocolPB/: DiskBalancerProtocolClientSideTranslatorPB.java  DiskBalancerProtocolPB.java  DiskBalancerProtocolServerSideTranslatorPB.java  ReconfigProtocolClientSideTranslatorPB.java  ReconfigProtocolPB.java  ReconfigProtocolServerSideTranslatorPB.java  ReconfigureProtocolClientSideTranslatorPB.java  ReconfigureProtocolDatanodePB.java  ReconfigureProtocolOmPB.java  ReconfigureProtocolPB.java  ReconfigureProtocolServerSideTranslatorPB.java  SCMSecretKeyProtocolClientSideTranslatorPB.java  SCMSecretKeyProtocolDatanodePB.java  SCMSecretKeyProtocolOmPB.java  SCMSecurityProtocolClientSideTranslatorPB.java  SCMSecurityProtocolPB.java  SecretKeyProtocolClientSideTranslatorPB.java  SecretKeyProtocolDatanodePB.java  SecretKeyProtocolOmPB.java  SecretKeyProtocolScmPB.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/security/: OzoneSecretKey.java  OzoneSecretManager.java  OzoneSecurityException.java  package-info.java
hadoop-hdds/framework/src/main/java/org/apache/hadoop/hdds/server/: BaseHttpServer.java  JsonUtils.java  OzoneAdmins.java  (+11 more)
hadoop-hdds/framework/src/main/resources/webapps/datanode/: dn.js
hadoop-hdds/framework/src/main/resources/webapps/static/: ozone.css  ozone.js
hadoop-hdds/framework/src/main/resources/webapps/static/templates/: config.html  jvm.html  menu.html  overview.html
hadoop-hdds/framework/src/test/java/org/apache/hadoop/ozone/: package-info.java
hadoop-hdds/framework/src/test/resources/: auditlog.properties  test.db.ini  test_secret_keys.json
hadoop-hdds/framework/src/test/resources/mockito-extensions/: org.mockito.plugins.MockMaker
hadoop-hdds/libozone/src/: CMakeLists.txt
hadoop-hdds/rocks-native/src/: CMakeLists.txt
hadoop-hdds/rocks-native/src/main/native/: ManagedRawSSTFileIterator.cpp  ManagedRawSSTFileReader.cpp  ManagedRawSSTFileReaderIterator.cpp  Pipe.cpp  Pipe.h  PipeInputStream.cpp  SSTDumpTool.cpp  cplusplus_to_java_convert.h
hadoop-hdds/rocks-native/src/main/patches/: rocks-native.patch
hadoop-hdds/rocks-native/src/test/resources/: log4j.properties
hadoop-ozone/common/: CMakeLists.txt  pom.xml
hadoop-ozone/common/dev-support/: findbugsExcludeFile.xml
hadoop-ozone/common/src/main/java/com/google/protobuf/: Proto2Utils.java
hadoop-ozone/common/src/main/java/org/apache/hadoop/fs/: package-info.java
hadoop-ozone/common/src/main/java/org/apache/hadoop/ozone/: FsServerDefaults.java  HadoopCompatibility.java  OFSPath.java  OmUtils.java  OzoneAcl.java  OzoneFsServerDefaults.java  OzoneIllegalArgumentException.java  OzoneURIParser.java  package-info.java
hadoop-ozone/common/src/main/java/org/apache/hadoop/util/: CrcComposer.java  CrcUtil.java
hadoop-ozone/common/src/main/proto/: FSProtos.proto  OzoneManagerProtocol.proto
hadoop-ozone/common/src/main/resources/: ozone-version-info.properties
hadoop-ozone/common/src/main/shellprofile.d/: hadoop-ozone-manager.sh
hadoop-ozone/common/src/test/java/org/apache/hadoop/ozone/: TestOmUtils.java  TestOzoneAcls.java  TestRangerClientAccessController.java
tools/fault-injection-service/: CMakeLists.txt  README.md
tools/fault-injection-service/FileSystem/: failure_injector.cc  failure_injector_fs.cc  failure_injector_fs.h
tools/fault-injection-service/FileSystem/cpp_unit/: TestFailureInjector.cc  TestFilePathFailures.cc
tools/fault-injection-service/Service/cpp/: failure_injector_svc_client.h  failure_injector_svc_server.cc  failure_injector_svc_server.h  run_grpc_service.cc  run_grpc_service.h
tools/fault-injection-service/Service/protos/: failure_injection_service.proto
(+10058 files in other folders)
