cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(ozone_native)
set(CMAKE_BUILD_TYPE Release)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD ${CMAKE_STANDARDS})
set(linked_libraries "")
if(NOT GENERATED_JAVAH)
    message(FATAL_ERROR "You must set the CMake variable GENERATED_JAVAH")
endif()
include_directories(${GENERATED_JAVAH})
if(${SST_DUMP_INCLUDE})
    include_directories(${ROCKSDB_HEADERS})
    link_directories(${ROCKSDB_LIB})
    set(SOURCE_FILES ${NATIVE_DIR}/SSTDumpTool.cpp)
    set(linked_libraries ${linked_libraries} rocksdbjni)
endif()
add_library(ozone_native SHARED ${SOURCE_FILES})
target_link_libraries(ozone_native ${linked_libraries})