cmake_minimum_required(VERSION 3.24)
project(sst_file_dump)
set(CMAKE_BUILD_TYPE Release)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 23)
include_directories(/opt/homebrew/Cellar/rocksdb/7.9.2/include)
link_directories(/opt/homebrew/Cellar/rocksdb/7.9.2/lib)
set(SOURCE_FILES src/main/native/SSTDumpTool.cpp src/main/native/SSTDumpTool.h src/main/native/cplusplus_to_java_convert.h)
add_library(sst_file_dump SHARED ${SOURCE_FILES})
target_link_libraries(sst_file_dump rocksdb)
